Fix jumping UI because of enter icon

--- a/src/main/webapp/app/core/navbar/global-search/components/modal/global-search-modal.component.scss
+++ b/src/main/webapp/app/core/navbar/global-search/components/modal/global-search-modal.component.scss
@@ -139,6 +139,8 @@
 
 .result-nav-hint {
     opacity: 0.5;
+    top: 0.75rem;
+    right: 0.75rem;
 }
 
 /* Text truncation utility */
